# PyHamcrest

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  codecov.yml  devel-requirements.txt  distribute_setup.py  example.py  pyproject.toml  pytest.ini  release.sh  requirements-devel.in  requirements-devel.txt  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  tutorial.html
.github/workflows/: main.yml  release.yml
changelog.d/: 135.bugfix.rst  141.feature.rst  150.misc.rst  156.bugfix.rst  159.misc.rst  160.feature.rst  162.misc.rst  163.misc.rst  166.misc.rst  170.feature.rst  171.feature.rst  175.misc  175.misc.rst  180.bugfix  182.bugfix.rst  206.feature.rst  207.bugfix.rst  272.misc.rst  273.bugfix.rst  towncrier_template.rst
doc/: Makefile  collection_matchers.rst  conf.py  core.rst  core_matchers.rst  custom_matchers.rst  decorator_matchers.rst  dictionary_matchers.rst  helpers.rst  index.rst  integration.rst  internals.rst  library.rst  logical_matchers.rst  number_matchers.rst  object_matchers.rst  sequence_matchers.rst  text_matchers.rst  tutorial.rst
doc/matcher_internals/: decorator_matchers.rst  dictionary_matchers.rst  logical_matchers.rst  number_matchers.rst  object_matchers.rst  sequence_matchers.rst  text_matchers.rst
doc/matcher_library/: decorator_matchers.rst  dictionary_matchers.rst  logical_matchers.rst  number_matchers.rst  object_matchers.rst  sequence_matchers.rst  text_matchers.rst
docker/: Dockerfile  README.md  clean-launch.sh
examples/: CustomDateMatcher.py  ExampleWithAssertThat.py  ExampleWithDeferAssert.py
hamcrest/: __init__.py
hamcrest-unit-test/: __init__.py  alltests.py  assert_that_test.py  base_matcher_test.py  match_equality_test.py  matcher_assert_test.py  matcher_test.py  string_description_test.py
hamcrest-unit-test/collection/: isdict_containing_test.py  isdict_containingentries_test.py  isdict_containingkey_test.py  isdict_containingvalue_test.py  isin_test.py  issequence_containing_test.py  issequence_containinginanyorder_test.py  issequence_containinginorder_test.py  issequence_onlycontaining_test.py  quasidict.py  quasisequence.py
hamcrest-unit-test/core/: __init__.py  allof_test.py  anyof_test.py  described_as_test.py  is_test.py  isanything_test.py  isequal_test.py  isinstanceof_test.py  isnone_test.py  isnot_test.py  issame_test.py  nevermatch.py
hamcrest-unit-test/integration/: match_equality_test.py
hamcrest-unit-test/number/: iscloseto_test.py  ordering_comparison_test.py
hamcrest-unit-test/object/: __init__.py  haslength_test.py  hasproperty_test.py  hasstring_test.py
hamcrest-unit-test/sequence/: isdict_containing_test.py  isdict_containingkey_test.py  isdict_containingvalue_test.py  isin_test.py  issequence_containing_test.py  issequence_onlycontaining_test.py  quasidict.py
hamcrest-unit-test/text/: isequal_ignoring_case_test.py  isequal_ignoring_whitespace_test.py  stringcontains_test.py  stringcontainsinorder_test.py  stringendswith_test.py  stringstartswith_test.py
hamcrest/core/: __init__.py  assert_raises.py  assert_that.py  base_description.py  base_matcher.py  description.py  match_equality.py  matcher.py  matcher_assert.py  selfdescribing.py  selfdescribingvalue.py  string_description.py
hamcrest/core/core/: __init__.py  allof.py  anyof.py  described_as.py  is_.py  isanything.py  isequal.py  isinstanceof.py  isnone.py  isnot.py  issame.py  raises.py  shortcut_combination.py
hamcrest/core/helpers/: __init__.py  hasmethod.py  wrap_matcher.py  wrap_shortcut.py
hamcrest/core/internal/: hasmethod.py  selfdescribingvalue.py  wrap_shortcut.py
hamcrest_unit_test/: __init__.py  alltests.py  assert_raises_test.py  assert_that_test.py  matcher_test.py  object_import.py  string_description_test.py
hamcrest_unit_test/collection/: has_length_test.py  is_empty_test.py  isdict_containing_test.py  isdict_containingentries_test.py  isin_test.py  issequence_containing_test.py  issequence_containinginanyorder_test.py  issequence_containinginorder_test.py  issequence_onlycontaining_test.py
hamcrest_unit_test/core/: anyof_test.py  described_as_test.py  is_test.py  isanything_test.py  isinstanceof_test.py  isnone_test.py  isnot_test.py  issame_test.py  raises_test.py
hamcrest_unit_test/number/: iscloseto_test.py  ordering_comparison_test.py
hamcrest_unit_test/object/: haslength_test.py  hasproperty_test.py
hamcrest_unit_test/text/: isequal_ignoring_case_test.py  isequal_ignoring_whitespace_test.py  stringcontains_test.py  stringcontainsinorder_test.py  stringendswith_test.py  stringmatches_test.py
src/hamcrest/: __init__.py
src/hamcrest/core/: __init__.py  assert_that.py  base_description.py  base_matcher.py  description.py  locale.py  localized_description.py  matcher.py  selfdescribing.py  selfdescribingvalue.py  string_description.py
tests/: object_import.py
tests/hamcrest_unit_test/: assert_that_test.py  base_description_test.py  base_matcher_test.py  defer_assert_test.py  localized_description_test.py  matcher_test.py  string_description_test.py
tests/type-hinting/: test.yml  test_common_matchers.yml  test_test_types.yml  test_types.yml
(+65 files in other folders)
